fix(UI): rendering loading spinner, error, small UI upgrades

--- a/src/index.html
+++ b/src/index.html
@@ -29,29 +29,7 @@
         </form>
       </header>
       <div class="results countries">
-        <ul class="countries__list">
-          <!-- <li>
-            <p><strong>id</strong>6877</p>
-            <p><strong>uid</strong>7d660ba2-ac0c-4334-9561-51f67a5713ea</p> -->
-          <!-- <a class="results__link results__link--active" href="#23456">
-              <figure class="results__fig">
-                <img src="img/pl_flag.png" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Pasta with Tomato ...</h4>
-                <p class="results__author">The Pioneer Woman</p>
-              </div>
-            </a> -->
-          <!-- </li> -->
-        </ul>
-      </div>
-      <div class="results country">
-        <ul class="country__list">
-          <!-- <li>
-            <p><strong>id</strong>6877</p>
-            <p><strong>uid</strong>7d660ba2-ac0c-4334-9561-51f67a5713ea</p>
-          </li> -->
-        </ul>
+        <ul class="countries__list"></ul>
       </div>
     </div>
   </body>
